feat: Добавил тему и обновил стили.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,23 +1,58 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+@custom-variant light (&:where(.light, .light *));
 
-/*:root {*/
-/*  --background: #ffffff;*/
-/*  --foreground: #171717;*/
-/*}*/
+html {
+  box-sizing: border-box;
+  font-size: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-/*@media (prefers-color-scheme: dark ) {*/
-/*  :root {*/
-/*    --background: #0a0a0a;*/
-/*    --foreground: #ededed;*/
-/*  }*/
-/*}*/
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  /*color: var(--foreground);*/
-  /*background: var(--background);*/
   font-family: Arial, Helvetica, sans-serif;
-  height: 100dvh;
-  width: 100dvw;
+  box-sizing: border-box;
+  font-size: 100%;
+  min-height: 100dvh;
+  max-width: 100dvw;
+  min-width: 360px;
+}
+
+input,
+button,
+select,
+textarea,
+optgroup,
+option {
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-style: inherit;
+  font-weight: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
+
+button {
+  all: unset;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
 }
