fix: Пофиксил стили для layout.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,58 +1,63 @@
 @import "tailwindcss";
+@tailwind utilities;
 @custom-variant dark (&:where(.dark, .dark *));
 @custom-variant light (&:where(.light, .light *));
 
-html {
-  box-sizing: border-box;
-  font-size: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@layer components {
+  html {
+    box-sizing: border-box;
+    font-size: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  *,
+  *::before,
+  *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    font-size: 100%;
+    min-height: 100dvh;
+    max-width: 100dvw;
+    min-width: 360px;
+  }
+
+  input,
+  button,
+  select,
+  textarea,
+  optgroup,
+  option {
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  a:visited {
+    color: inherit;
+  }
+
+  button {
+    all: unset;
+    box-sizing: border-box;
+    cursor: pointer;
+  }
+
+  ul {
+    list-style: none;
+  }
+
 }
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
-  font-size: 100%;
-  min-height: 100dvh;
-  max-width: 100dvw;
-  min-width: 360px;
-}
-
-input,
-button,
-select,
-textarea,
-optgroup,
-option {
-  color: inherit;
-  font-family: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:visited {
-  color: inherit;
-}
-
-button {
-  all: unset;
-  box-sizing: border-box;
-  cursor: pointer;
-}
-
-ul {
-  list-style: none;
-}
