--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,12 @@
 @import "tailwindcss";
 
-/*@custom-variant dark (&:where(.dark, .dark *));*/
-/*@custom-variant light (&:where(.light, .light *));*/
+@custom-variant dark (&:where(.dark, .dark *));
+@custom-variant light (&:where(.light, .light *));
 
 @theme {
-    --color-primary: #7a49fe;
-    --color-secondary: #f6cc1a;
     /*--color-white: #ffffff;*/
     /*--color-black: #000000;*/
     /*--color-transparate: transparent;*/
-
     /*--color-dark-100: #67656c;*/
     /*--color-dark-150: #4f4d53;*/
     /*--color-dark-200: #45434a;*/
@@ -19,14 +16,15 @@
     /*--color-dark-700: #1d1e24;*/
     /*--color-dark-800: #16131B;*/
 
+    --color-primary: #9a75ff;
+    --color-text: var(--color-zinc-700);
+    --color-border: rgba(0, 0, 0, 0.2);
+    --color-shadow: rgba(0, 0, 0, 0.3);
+
     --color-background-primary-from: #f5f7fa;
     --color-background-primary-to: #e3e8f0;
     --color-background-secondary-from: #dfe4ed;
     --color-background-secondary-to: #cbd5e1;
-
-    --color-border: rgba(0, 0, 0, 0.2);
-    --color-shadow: rgba(0, 0, 0, 0.3);
-    --color-text: #000000;
 
     --screens-xl: 1280px;
     --screens-lg: 1024px;
@@ -42,14 +40,15 @@
 
 @layer theme {
     .dark {
+        --color-primary: #7a49fe;
+        --color-text: var(--color-zinc-200);
+        --color-border: rgba(255, 255, 255, 0.1);
+        --color-shadow: rgba(0, 0, 0, 0.6);
+
         --color-background-primary-from: #2f2b53;
         --color-background-primary-to: #171f41;
         --color-background-secondary-from: #3f3a69;
         --color-background-secondary-to: #2f365e;
-
-        --color-border: rgba(255, 255, 255, 0.1);
-        --color-shadow: rgba(0, 0, 0, 0.6);
-        --color-text: #ffffff;
     }
 }
 
