--- a/src/shared/styles/customTheme.css
+++ b/src/shared/styles/customTheme.css
@@ -45,6 +45,7 @@
     --color-shadow: rgba(0, 0, 0, 0.3);
 
     --breakpoint-xs: 480px;
+    --breakpoint-2xs: 360px;
 
     --spacing-headerHeight: 60px;
 
